# parstur

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUTTONS_DOCUMENTATION.md  Caddyfile  Dockerfile  Explaining Project Interface Functionality.md  FRONTEND.md  PROJECT_REVIEW.md  README.md  RECOMMENDATIONS.md  REVIEW.md  REVISION_REPORT.md  ROADMAP.md  SECURITY.md  STAGES_13_16.md  TODO.md  TOP_OPTIMIZATIONS.md  api_cache.py  app_core.py  backup_db.py  base_client.py  check_db.py  ci.example.yml  cleanup_broken.py  cleanup_duplicates.py  cloud_sync.py  config.json  db.py  debug_tmdb_lists.py  docker-compose.yml  fetch_imdb_ids.py  fix_corrupted_titles.py  fix_ids_from_rutor.py  fix_posters.py  generate_certs.py  index.html  kinopoisk_client.py  (+40 more)
.github/workflows/: ci.yml
db/: __init__.py  collections.py  core.py  history.py  items.py  kinopub_auth.py  sessions.py  settings_db.py
docs/audits/: REVIEW-2026-05-14.md  REVIEW-2026-05-19.md
docs/plans/: PLAN-kinopub-integration.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: AdminPanel.test.ts  AdminPanel.vue  AppShell.test.ts  AppShell.vue  AuditPanel.test.ts  AuditPanel.vue  CloudPanel.vue  CollectionsIO.test.ts  CollectionsIO.vue  CredentialSettingsPanel.test.ts  CredentialSettingsPanel.vue  ItemCardModal.test.ts  ItemCardModal.vue  KinopubAuthPanel.test.ts  KinopubAuthPanel.vue  LampaPanel.vue  LoginModal.test.ts  LoginModal.vue  LogsPanel.test.ts  LogsPanel.vue  PlayerModal.test.ts  PlayerModal.vue  ProxyPanel.vue  RulesPanel.test.ts  RulesPanel.vue  StatsPanel.test.ts  StatsPanel.vue  SyncPanel.test.ts  SyncPanel.vue  TmdbAuthPanel.vue  ToastContainer.vue  TraktAuthPanel.vue
frontend/src/composables/: useApi.ts  useFilterPersistence.test.ts  useFilterPersistence.ts
frontend/src/stores/: admin.test.ts  admin.ts  audit.test.ts  audit.ts  categories.test.ts  categories.ts  collections.test.ts  collections.ts  (+24 more)
lampa_plugin/: README.md  test_plugin.js  tmdb_folders.js
migrations/: 0001_baseline.sql  0002_filter_rules_audit_log.sql  0003_items_tmdb_id.sql  0004_consolidate_schema.sql  0005_sessions.sql  0006_kinopub.sql  0007_ratings_and_watched.sql  0008_lampa_settings.sql  0009_cloud_sync_log.sql  README.md
routes/: admin.py  auth.py  cloud.py  collections.py  export.py  feed.py  items.py  jacred.py  kinopub.py  lampa.py  process.py  proxy.py  streams.py  tmdb.py  trakt.py
runtime/: __init__.py  admin.py  kinopub.py  processes.py  rezka.py  ws.py
scratch/: add_sort_order.py  check_columns.py  check_counts.py  check_db.py  check_ids.py  check_ignored.py  check_item.py  check_items_tron.py  check_jetboy.py  check_log_otmorozh.py  check_loose_dupes.py  check_merged.py  check_norms_sample.py  check_releases.py  check_releases_v2.py  check_releases_v3.py  check_rezka_dupes.py  check_rezka_stats.py  check_schema.py  check_schema_final.py  check_stats.py  check_substance_ratings.py  check_suspicious.py  check_домочатцы.py  check_домочатцы_v2.py  check_домочатцы_v3.py  cleanup_titles.py  clear_ratings.py  debug_db.py  debug_kalevala.py  debug_rezka_api.py  debug_rezka_module.py  debug_rezka_search.py  debug_rezka_search_class.py  debug_rezka_search_deep.py  debug_rezka_search_instance.py  debug_rutor.py  delete_2022.py  delete_old_items.py  diagnose_boys.py  (+82 more)
tests/: conftest.py  test_api_collections_io.py  test_api_item_detail.py  test_api_jacred_search.py  test_api_settings_credentials.py  test_app_core.py  test_audit_log.py  test_auth_persistence.py  test_backup.py  test_clean_t.py  test_cloud_sync.py  test_collections_export_import.py  test_db_collections_no_seed.py  test_db_helpers.py  test_db_kinopub_auth.py  test_db_kinopub_bind.py  test_filter_rules.py  test_find_existing_item.py  test_health.py  test_kinopub_client.py  test_kinopub_collections_sync.py  test_lampa.py  test_logging_config.py  test_migrations.py  test_parse_rutor_date.py  test_process_logs.py  test_proxy_manager.py  test_ratings_and_watched.py  test_rebind_audit.py  test_rezka_relogin.py  test_routes_kinopub.py  test_routes_kinopub_content.py  test_runtime_kinopub.py  test_runtime_kinopub_content.py  test_save_checkpoint.py  test_search_names.py  test_sessions.py  test_settings.py  test_spa_mount.py  test_subtitle_proxy_allowlist.py  (+2 more)
(+9 files in other folders)
